# wolwm

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml
.github/workflows/: registry.yaml  release.yml  test.yml
backend/: .gitignore  pyproject.toml
backend/wolwm/: __init__.py  main.py
backend/wolwm/api/: __init__.py  rest.py  static.py
backend/wolwm/api/routes/: __init__.py  devices.py  events.py  wake.py
backend/wolwm/config/: __init__.py  default.py  definitions.py
backend/wolwm/db/: __init__.py  crud.py  database.py  models.py
backend/wolwm/log/: __init__.py  formatter.py  logger.py
backend/wolwm/services/: __init__.py  devices.py  events.py  wake.py
backend/wolwm/types/: __init__.py  api.py  base.py  common.py  db.py  enum.py
backend/wolwm/utils/: helper.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  AppRouter.tsx  Layout.tsx  index.css
frontend/src/components/: Loading.tsx  Modal.tsx  PasswordInput.tsx  Spinner.tsx  index.ts
frontend/src/config/: constants.ts  endpoints.ts  index.ts
frontend/src/context/: index.ts
frontend/src/context/theme/: index.tsx
frontend/src/layout/: Content.tsx  Header.tsx  Nav.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: axios.ts  helpers.ts  hooks.ts  rest.ts
frontend/src/views/: Devices.tsx  Error.tsx  Events.tsx  NoMatch.tsx  index.ts
