[tool.poetry]
name = "wolwm"
version = "0.1.5"
description = ""
authors = ["thelicato <thelicato@duck.com>"]
include = [{ path = "wolwm/ui/**/*", format = ["sdist", "wheel"] }]
packages = [{include = "wolwm"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.24.1"}
gevent = "^26.4.0"
fastapi = "^0.135.3"
starlette = ">=0.49.1,<1.0.0"
uvicorn = "^0.44.0"
structlog = "^25.5.0"
requests = "^2.33.1"
sqlalchemy = "^2.0.49"
pyhumps = "^3.8.0"
backoff = "^2.2.1"
wakeonlan = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wolwm = 'wolwm.main:main'