[project]
name = "wolwm"
version = "0.1.6"
description = ""
authors = [
    { name = "thelicato", email = "thelicato@duck.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.24.1,<0.25.0",
    "gevent>=26.4.0,<27.0.0",
    "fastapi>=0.135.3,<0.136.0",
    "starlette>=0.49.1,<1.0.0",
    "uvicorn>=0.44.0,<0.45.0",
    "structlog>=25.5.0,<26.0.0",
    "requests>=2.33.1,<2.34.0",
    "sqlalchemy>=2.0.49,<2.1.0",
    "pyhumps>=3.8.0,<3.9.0",
    "backoff>=2.2.1,<3.0.0",
    "wakeonlan>=3.1.0,<4.0.0",
]

[project.scripts]
wolwm = "wolwm.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"wolwm" = ["ui/**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wolwm*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
